# clipboard-remoting

./: README.org
.github/workflows/: main.yml
ci_cd/: README.org  build.sh
ci_cd/linux/: build.sh  release_README.txt
ci_cd/linux/xdg/: AppRun-cli  AppRun-gui  rclip-client-cli.desktop  rclip-client-gui.desktop
ci_cd/macos/: build.sh
ci_cd/macos/macos/: Info.plist  PkgInfo
ci_cd/windows/: build.sh  release_README.txt
clipboard-client/: Cargo.toml  README.org
clipboard-client/src/: main.rs  main_cli.rs  main_gui.rs
clipboard-server/: Cargo.toml  README.org
clipboard-server/src/: main.rs
rclip-certs/: README.org  make_cert.sh
rclip-client/: Cargo.toml  README.org  build.rs
rclip-client/src/: common.rs  main_cli.rs  main_gui.rs
rclip-config/: Cargo.toml  README.org
rclip-config/src/: lib.rs
rclip-server/: Cargo.toml  README.org
rclip-server/src/: main.rs
rclip_client/: Cargo.toml  README.org
rclip_client/src/: common.rs  main_gui.rs
rclip_config/: Cargo.toml  README.org
rclip_config/src/: lib.rs
rclip_server/: Cargo.toml  README.org
rclip_server/src/: main.rs
support/: README.org  config-client.toml  config-server.toml  gencert.bat  gencert.sh
