[package]
name = "clipboard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
clap = "2.33.3"

[[bin]]
name = "clipboard-server"
path = "src/main.rs"