[package]
name = "rclip-client"
version = "0.0.2"
edition = "2018"
description = "rclip clipboard client" 
keywords = ["clipboard", "remoting"]
license = "GPL"
repository = "https://github.com/yveszoundi/rclip"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rclip-client-cli"
path = "src/main_cli.rs"

[[bin]]
name = "rclip-client-gui"
path = "src/main_gui.rs"

[dependencies]
clap = "2.33.3"
copypasta = "0.7.1"
copypasta-ext = "0.3.7"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-rustls = "0.23.3"

[target.'cfg(not(any(target_os = "openbsd", target_os = "freebsd", target_os ="netbsd" )))'.dependencies]
fltk = { version = "1.2.26", features = ["fltk-bundled"] }
