[package]
name = "rclip-server"
version = "0.0.2"
edition = "2018"
description = "rclip clipboard server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
clap = "2.33.3"

[[bin]]
name = "rclip-server"
path = "src/main.rs"