[package]
name = "rclip_client"
version = "1.0.3"
edition = "2021"
description = "rclip clipboard client" 
keywords = ["clipboard", "remoting"]
license = "GPL"
repository = "https://github.com/yveszoundi/rclip"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rclip-client-cli"
path = "src/main_cli.rs"

[[bin]]
name = "rclip-client-gui"
path = "src/main_gui.rs"
required-features = ["gui"]

[dependencies]
clap = "2.33.3"
copypasta-ext = "0.3.9"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
rclip_config = { path = "../rclip_config" }
fltk = { version = "1.3.13", features = ["fltk-bundled"], optional = true }

[features]
default = []
gui = ["fltk"]


