[package]
name = "rclip_config"
version = "1.0.2"
edition = "2018"
description = "rclip clipboard configuration" 
keywords = ["clipboard", "remoting"]
repository = "https://github.com/yveszoundi/rclip"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"